--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -57,11 +57,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <RadioButton
+                    android:id="@+id/diavolo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/diavolo"/>
 
                 <RadioButton
+                    android:id="@+id/funghi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/funghi"/>
